--- a/src/components/navigation/_style.scss
+++ b/src/components/navigation/_style.scss
@@ -53,4 +53,54 @@ aside {
     background-color: #5932ea;
     color: white;
   }
+
+  .aside-item {
+    width: 260px;
+    height: 150px;
+    border-radius: 20px;
+    padding: 34px 20px;
+    margin: 25px 25px;
+    background: linear-gradient(107.91deg, #eaabf0 7.37%, #4623e9 95.19%);
+    margin-top: 100px;
+    margin-bottom: 48px;
+
+    & h3 {
+      font-family: Poppins;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 21px;
+      letter-spacing: 0.01em;
+      text-align: center;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color: white;
+      margin-bottom: 10px;
+    }
+
+    .aside-item-btn {
+      text-align: center;
+    }
+
+    & button {
+      padding: 10px 55px;
+      border-radius: 20px;
+      border: none;
+      font-family: Poppins;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 21px;
+      letter-spacing: 0.01em;
+      text-align: center;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      color: #4925e9;
+    }
+  }
+
+  .aside-profile {
+    margin: 25px 25px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
 }
